services/targeting-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: targeting-service
  namespace: targeting-service
spec:
  selector:
    app: targeting-service
  ports:
  - name: http
    port: 8003
    targetPort: 8003
