services/targeting-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: togglemaster-api
  namespace: targeting-service
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /rules
        pathType: Prefix
        backend:
          service:
            name: targeting-service
            port:
              name: http
